nessus/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nessus
  namespace: default
  labels:
    app: nessus
spec:
  ports:
    - protocol: TCP
      name: nessus
      port: 8834
  selector:
    app: nessus
