nessus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nessus
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
      - nessus.aslth.local
      secretName: nessus-tls
  rules:
  - host: nessus.aslth.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nessus
            port:
              number: 8834
